--- a/app/templates/frontend/checkout.html
+++ b/app/templates/frontend/checkout.html
@@ -12,46 +12,78 @@
                 
                 <div class="pt-2"></div>
                 <div class="bg-white rounded shadow-sm p-4 mb-4">
-                   <h4 class="mb-1">Choose a delivery address</h4>
-                   <h6 class="mb-3 text-black-50">Multiple addresses in this location</h6>
-                   <div class="row">
+                  <h4 class="mb-1">Lieferadresse</h4>
+                  <h6 class="mb-3 text-black-50">An diese Adressen liefern</h6>
+                  <div class="row">
                       <div class="col-md-6">
-                         <div class="bg-white card addresses-item mb-4 border border-success">
-                            <div class="gold-members p-4">
-                               <div class="media">
-                                  <div class="mr-3"><i class="icofont-ui-home icofont-3x"></i></div>
-                                  <div class="media-body">
-                                     <h6 class="mb-1 text-black">Adresse</h6>
-                                     <p class="text-black">{{current_user.street}} {{current_user.house_number}}, <br>{{current_user.postal_code}} {{current_user.city}}
-                                     </p>
-                                     <p class="mb-0 text-black font-weight-bold"><a class="btn btn-sm btn-success mr-2" href="#"> DELIVER HERE</a> 
-                                        <span>30MIN</span>
-                                     </p>
+                          <div class="bg-white card addresses-item mb-4 border border-success">
+                              <div class="gold-members p-4">
+                                  <div class="media">
+                                      <div class="mr-3"><i class="icofont-ui-home icofont-3x"></i></div>
+                                      <div class="media-body">
+                                          <h6 class="mb-1 text-black">Adresse</h6>
+                                          <p class="text-black">
+                                              {{ current_user.street }} {{ current_user.house_number }},
+                                              <br>{{ current_user.postal_code }} {{ current_user.city }}
+                                          </p>
+                                          <p class="mb-0 text-black font-weight-bold">
+                                              <!--<a class="btn btn-sm btn-success mr-2" href="#" onclick="selectAddress('{{ current_user.street }}', '{{ current_user.house_number }}', '{{ current_user.postal_code }}', '{{ current_user.city }}')">HIER LIEFERN</a>-->
+                                              {% if client.lieferzeiten %}
+                                              <span class="btn btn-success">{{ client.lieferzeiten[0].zeit_bis.strftime('%M') }} MIN</span>
+                                              {% else %}
+                                             <span>Keine Lieferzeit verfügbar</span>
+                                             {% endif %}
+                                          </p>
+                                      </div>
                                   </div>
-                               </div>
-                            </div>
-                         </div>
+                              </div>
+                          </div>
                       </div>
+
                       <div class="col-md-6">
-                         <div class="bg-white card addresses-item mb-4">
+                        <div class="bg-white card addresses-item mb-4 border border-success">
                             <div class="gold-members p-4">
-                               <div class="media">
-                                  <div class="mr-3"><i class="icofont-briefcase icofont-3x"></i></div>
-                                  <div class="media-body">
-                                     <h6 class="mb-1 text-secondary">Work</h6>
-                                     <p>NCC, Model Town Rd Town, Ludhiana, Punjab 141002, India
+                              <div class="media">
+                                 
+                                 <div class="media-body">
+                                     <h6 class="mb-1 text-black">Meine Daten</h6>
+                                     <p class="text-black">Name: 
+                                         {{ current_user.username }}
+                                         <br>Telefonnummer: {{ current_user.phone_number }}
+                                         <br>E-Mail: {{current_user.email}}
+                                         
                                      </p>
-                                     <p class="mb-0 text-black font-weight-bold"><a class="btn btn-sm btn-secondary mr-2" href="#"> DELIVER HERE</a> 
-                                        <span>40MIN</span>
-                                     </p>
-                                  </div>
-                               </div>
+                                     <p class="mb-0 text-black font-weight-bold">
+                                       <br>
+                                   </p>
+                                     
+                                 </div>
+                             </div>
                             </div>
-                         </div>
-                      </div>
-                   </div>
-                   
-                </div>
+                        </div>
+                    </div>
+                      <!-- Neue Adresse hinzufügen -->
+                      <!--<div class="col-md-6">
+                          <div class="bg-white card addresses-item mb-4">
+                              <div class="gold-members p-4">
+                                  <div class="media">
+                                      <div class="mr-3"><i class="icofont-location-pin icofont-3x"></i></div>
+                                      <div class="media-body">
+                                          <h6 class="mb-1 text-secondary">Neue Adresse</h6>
+                                          <form id="newAddressForm">
+                                              <input type="text" class="form-control mb-2" name="street" placeholder="Straße" required>
+                                              <input type="text" class="form-control mb-2" name="house_number" placeholder="Hausnummer" required>
+                                              <input type="text" class="form-control mb-2" name="postal_code" placeholder="PLZ" required>
+                                              <input type="text" class="form-control mb-2" name="city" placeholder="Stadt" required>
+                                              <button type="button" class="btn btn-secondary" onclick="selectNewAddress()">Neue Adresse nutzen</button>
+                                          </form>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>-->
+                  </div>
+              </div>
                 <div class="pt-2"></div>
                 <div class="bg-white rounded shadow-sm p-4 osahan-payment">
                    <h4 class="mb-1">Choose payment method</h4>
@@ -230,6 +262,7 @@
 
 
 {% endblock content %}
+
 
 
 
